# color_cloud_from_image

./: .gitignore  LICENSE  README.md
color_cloud_from_image_proc/: CMakeLists.txt  nodelet_plugins.xml  package.xml
color_cloud_from_image_proc/config/: cameras.yaml  cams.yaml  self_filter_argo_tracker.yaml
color_cloud_from_image_proc/include/color_cloud_from_image_proc/: color_cloud_from_image.h
color_cloud_from_image_proc/launch/: color_cloud_from_image.launch
color_cloud_from_image_proc/src/: color_cloud_from_image.cpp  color_cloud_from_image_node.cpp  color_cloud_from_image_nodelet.cpp
