<?xml version="1.0"?>
<package format="2">
  <name>color_cloud_from_image_proc</name>
  <version>0.0.0</version>
  <description>The color_cloud_from_image_proc package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>kalibr_camera_loader</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <!--<depend>aslam_cameras</depend>
  <depend>aslam_time</depend>
  <depend>sm_boost</depend>
  <depend>sm_property_tree</depend>
  <depend>sm_eigen</depend>
  <depend>sm_kinematics</depend>
  <depend>sm_opencv</depend>
  <depend>sm_logging</depend>-->
  <depend>robot_self_filter</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
